# content-assimilation-engine

./: .env.cmake  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  b.cc  demo_omni_job.yaml  env.sh  g.py  posix_api.cc  posix_api.h  posix_fs_api.h  requirements.txt  s.cpp  test_omni_job.yaml  ydata.ipynb
.cache/clangd/index/: H5FDhermes.cc.63E8B3ADB3665AA0.idx  H5FDhermes.h.B5BC645315E7D8F3.idx  abstract_mapper.h.44FFA36BA3EC3879.idx  adapter_types.h.6E834713E692E2E8.idx  balanced_mapper.h.04B2705D6A8B8C36.idx  filesystem.cc.AB194219C9E8452E.idx  filesystem.h.9609152AB064FC59.idx  filesystem_io_client.h.613FC86F322A6D8D.idx  filesystem_mdm.h.8F97BD08E97CDA8D.idx  mapper_factory.h.EEE5B6781E00341F.idx  mpiio_api.cc.94585746CE7250B7.idx  mpiio_api.h.2B0EE7ABACF32284.idx  mpiio_fs_api.h.30C65FA197C5E47D.idx  posix_api.cc.578506E050DE4D75.idx  posix_api.h.6D9A99BEF787E6BF.idx  posix_fs_api.h.ED52037D3DCC673E.idx  stdio_api.cc.3DE94B961670E456.idx  stdio_api.h.BB49CF43F12FF387.idx  stdio_fs_api.h.DEB6838119863807.idx
.github/workflows/: arm64-docker.yml  codespell.yml  commitlint.yml  docker-base.yml  docker-deps.yml  docker-user.yml  docker.yml  mac-omni-r.yml  synology.yml  ubu-24-spack-0.23.0-pure.yml  ubu-omni-r.yml  win-omni-r.yml
adapters/: CMakeLists.txt  adapter_constants.h  adapter_types.h
adapters/config/: CMakeLists.txt  config_client_default.h  config_manager.cc  config_manager.h
adapters/filesystem/: CMakeLists.txt  filesystem.h  filesystem_io_client.h  filesystem_mdm.h
adapters/mapper/: abstract_mapper.h  balanced_mapper.h  mapper_factory.h
adapters/mpiio/: CMakeLists.txt  mpiio_api.cc  mpiio_api.h  mpiio_fs_api.h
adapters/nvidia_gds/: CMakeLists.txt  cufile_api.cc  cufile_api.h
adapters/posix/: CMakeLists.txt  posix_api.cc  posix_api.h  posix_fs_api.h
adapters/stdio/: CMakeLists.txt  stdio_api.cc  stdio_api.h  stdio_fs_api.h
adapters/vfd/: CMakeLists.txt  H5FDhermes.cc  H5FDhermes.h  README.md
cae_codegen/: CMakeLists.txt  generate_config_default.py
config/: cae_client_default.yaml
data/: A46_xx.arrow.parquet  A46_xx.feather  A46_xx.h5  A46_xx.par  A46_xx.zlib.h5  IN625InitialConditions.dream3d
docker/: Dockerfile
engine/: CMakeLists.txt  README.md  chimaera_repo.yaml
engine/filesystem/: CMakeLists.txt  README.md
engine/filesystem/include/filesystem/: filesystem_client.h  filesystem_lib_exec.h  filesystem_methods.h  filesystem_tasks.h
engine/filesystem/src/: CMakeLists.txt  filesystem_client.cc  filesystem_monitor.py  filesystem_runtime.cc
engine/globus/: README.txt
engine/s3/: README.txt
llm/: prompt1.md  prompt2.md  prompt3.md
omni/: CMakeLists.txt  FilesystemRepoClient.cc  HermesRepoClient.cc  OMNI.h  OMNI_factory.h  ParquetFormatClient.cc  README.md  S3RepoClient.cc  WILDCARD_FEATURES.md  binary_file_omni.cc  binary_file_omni.h  bld.bat  build.sh  example_job.yaml  factory.cc  factory.h  filesystem_repo_client.cc  filesystem_repo_omni.h  meta.yaml  posix.yml  wrp.cc  wrp_binary_format_mpi.cc
omni-old/: CMakeLists.txt  CTestConfig.cmake  HDF5FormatClient.cc  PosixFormatClient.cc  posix.yml  pyproject.toml  wrp.cc
omni-old/synology/HDF5Viewer/: INFO
omni-old/synology/HDF5Viewer/SynoBuildConf/: install
omni-old/synology/HDF5Viewer/app/: config
omni-old/synology/HDF5Viewer/conf/: privilege
omni-old/synology/HDF5Viewer/scripts/: start-stop-status
omni-old/synology/HDF5Viewer/server/: api.py
omni-old/synology/HDF5Viewer/ui/: index.html
omni-old/test/: empty.yml  hash.yml  http.yml  lambda.bat  lambda.sh  lseek.yml  nested.yml  posix.yml  root_seq.yml  scalar.yml
omni/config/: demo_job.yaml  example_simple.yaml  quick_test.yaml  run_all_tests.sh  terra_hdf5_load.yaml  test_wildcards.sh  wildcard_test.yaml
omni/format/: binary_file_omni.h  format_client.h  format_factory.cc  format_factory.h  progress_bar.h
omni/repo/: filesystem_repo_omni.h  repo_client.h  repo_factory.cc  repo_factory.h
omni/test/: README.md  invalid.yml  lambda.bat  lambda.py  lseek.yml~  path.yml  posix.yml  redi.yml  rget.bat  rget.py  rget.sh  rget.yml
synology/: install.sh
synology/HDF5Viewer/: INFO
synology/HDF5Viewer/SynoBuildConf/: build  install
synology/HDF5Viewer/scripts/: start-stop-status
synology/HDF5Viewer/ui/: app.js
test/jarvis_wrp_cae/jarvis_wrp_cae/cae_adapter/: README.md  pkg.py
test/jarvis_wrp_cae/jarvis_wrp_cae/cae_adapter_bench/: README.md  pkg.py
test/jarvis_wrp_cae/jarvis_wrp_cae/cae_mpiio_tests/: pkg.py
test/jarvis_wrp_cae/jarvis_wrp_cae/cae_nvidia_gds_tests/: pkg.py
test/jarvis_wrp_cae/jarvis_wrp_cae/cae_posix_tests/: pkg.py
test/jarvis_wrp_cae/jarvis_wrp_cae/cae_run/: pkg.py
test/jarvis_wrp_cae/jarvis_wrp_cae/cae_stdio_tests/: pkg.py
test/jarvis_wrp_cae/jarvis_wrp_cae/cae_vfd_tests/: pkg.py
test/jarvis_wrp_cae/jarvis_wrp_cae/omni_parse/: README.md  pkg.py
test/jarvis_wrp_cae/pipelines/: test_wrp_cae_base.yaml  test_wrp_cae_ior.yaml  test_wrp_cae_ior_basic.yaml
test/jarvis_wrp_cae/pipelines/mpiio/: test_wrp_cae_cte_mpiio_basic_async.yaml  test_wrp_cae_cte_mpiio_basic_sync.yaml  test_wrp_cae_hermes_mpiio_basic_async.yaml  test_wrp_cae_hermes_mpiio_basic_sync.yaml  test_wrp_cae_mpiio_basic_async.yaml  test_wrp_cae_mpiio_basic_sync.yaml
test/jarvis_wrp_cae/pipelines/nvidia_gds/: test_wrp_cae_hermes_nvidia_gds.yaml  test_wrp_cae_nvidia_gds_basic.yaml
test/jarvis_wrp_cae/pipelines/omni/: README_TERRA.md  (+6 more)
test/unit/: CMakeLists.txt  basic_test.h  main.cc  main_mpi.cc
test/unit/adapters/: adapter_test_utils.h  binary_file_tests.h  filesystem_tests.h
test/unit/adapters/mpiio/: CMakeLists.txt  mpiio_adapter_basic_test.cc  mpiio_adapter_test.h
test/unit/adapters/posix/: CMakeLists.txt  posix_adapter_basic_test.cc  posix_adapter_test.h  posix_simple_io_mpi.cc  posix_simple_io_omp.cc
test/unit/adapters/stdio/: CMakeLists.txt  stdio_adapter_basic_test.cc  stdio_adapter_func_test.cc  stdio_adapter_mapper_test.cc  stdio_adapter_mode_test.cc  stdio_adapter_test.h
test/unit/adapters/vfd/: CMakeLists.txt  hermes_vfd_basic_test.cc  hermes_vfd_test.h
(+49 files in other folders)
